add doc info to toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ license = "MIT"
 keywords = ["hwloc"]
 description = "Rust bindings for the hwloc hardware locality library."
 repository = "https://github.com/daschl/hwloc-rs"
-homepage = "https://github.com/daschl/hwloc-rs"
+homepage = "http://daschl.github.io/hwloc-rs/"
+documentation = "http://daschl.github.io/hwloc-rs/rustdoc/"
 build = "build.rs"
 links = "hwloc"
 readme = "README.md"
