--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ notifications:
 branches:
   only:
     - master
+before_install:
+  - sudo apt-get install hwloc libhwloc-dev
 install:
   - wget http://www.open-mpi.org/software/hwloc/v1.11/downloads/hwloc-1.11.1.tar.gz
   - tar -xzvf hwloc-1.11.1.tar.gz
