--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rust:
   - stable
   - beta
   - nightly
+sudo: false
 os:
   - osx
   - linux
@@ -16,8 +17,10 @@ branches:
   only:
     - master
 before_install:
-  - sudo apt-get install hwloc libhwloc-dev
-install:
-  - wget http://www.open-mpi.org/software/hwloc/v1.11/downloads/hwloc-1.11.1.tar.gz
-  - tar -xzvf hwloc-1.11.1.tar.gz
-  - cd hwloc-1.11.1  && ./configure && make && sudo make install
+  - brew update
+  - brew install hwloc
+addons:
+  apt:
+    packages:
+      - hwloc
+      - libhwloc-dev
